fix: fix problems with slider on mobile version

--- a/src/style/_projects.sass
+++ b/src/style/_projects.sass
@@ -56,6 +56,13 @@ section.projects
             +mobile
                 display: block
 
+        .repair-design
+            +mobile
+                +flex
+        
+        .theyallow
+            +mobile
+                +flex
                
         ._project
             +grid-col(1fr 350px, end)
@@ -63,7 +70,9 @@ section.projects
             margin: 0 50px
             +mobile
                 +flex
-                margin: 0
+                grid-template-columns: 1fr
+                margin-top: 30px 
+                margin-left: 0
             ._information
                 display: block
                 margin-right: 50px
@@ -87,7 +96,7 @@ section.projects
                     font-size: 35pxd
                     color: #42D4AD
                     +mobile
-                        font-size: 28px
+                        font-size: 20px
                         line-height: 20px
                         margin-bottom: 0
 
@@ -96,6 +105,7 @@ section.projects
                         margin: 20px
                         +mobile
                             margin: 10px
+                            font-size: 14px
 
                 ._click 
                     padding: 30px
@@ -104,13 +114,14 @@ section.projects
                     color: #e7717d
                     +mobile
                         margin-top: 10px
-                        font-size: 14px
+                        font-size: 12px
                         padding: 10px
         .repair-design
             display: none
         .theyallow
             
         a 
+            margin: 0 auto
             +mobile
                 order: 1
         img 
